# ocv_kinect

./: .gitignore  .sconsign.dblite  LICENSE  README.md  README.md~  SConstruct  gazebopluginpath  ips.txt  opennipath
plugin/: CMakeLists.txt  kinectcontrol.cpp
plugins/CameraControl/: .sconsign.dblite  CMakeCache.txt  CMakeLists.txt  Makefile  SConscript  cameracontrol.cpp  cameracontrol.hpp  cmake_install.cmake
plugins/CameraControl/include/: CameraControl.hpp
plugins/CameraControl/src/: CameraControl.cpp  CameraControl.os
plugins/CameraControl2/: .sconsign.dblite  SConstruct
plugins/KeyboardController/: CMakeCache.txt  CMakeLists.txt  keyboardcontroller.cpp  keyboardcontroller.hpp
plugins/OccamControl/: SConscript
plugins/depr_KeyboardController/: Makefile  cmake_install.cmake
tools/GestureServer/: .sconsign.dblite  SConscript  SConstruct
tools/SimpleSockets/: .sconsign.dblite  SConstruct  SimpleClient  SimpleClient.cpp  SimpleServer  SimpleServer.cpp
tools/SkeletonRecorder/: Makefile  SkeletonRecorder.cpp  random_gestures.txt  simple_gestures.txt  test_gestures.txt
tools/SkeletonTest/: Makefile
tools/depr_SimpleSockets/: .sconsign.dblite  SimpleClient.cpp  SimpleServer.cpp
tools/depr_SkeletonTest/: Makefile  SkeletonTest.cpp
utils/include/: gesture.hpp  vec3.hpp
utils/src/: vec3.cpp  vec3.os
worlds/: PracticeScene.world  Scene1.world  Scene2.world  gaz.sh  opennipath  scenecam.world  testworld.world
worlds/Meshes/: Acropolis.dae  BigPillar.dae  Fence.dae  Pillar.dae  Roof.dae  Ruin.dae  Stairs.dae  Stall.dae  Target1.dae  Target2.dae  Target3.dae  Target4.dae  Target5.dae  (+3 more)
(+35 files in other folders)
